--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
 		}
 	],
 	"require" : {
-		"php" : ">=8.1"
-		
+		"php" : ">=8.1",
+		"syncgw/core-bundle" : ">=9.19.78"
 	},
 	"autoload" : {
 		"psr-4" : {
