--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,13 @@
 	"name" : "syncgw/ics-bundle",
 	"description" : "sync•gw ICS (Bulk Data Transfer Protocol) bundle.",
 	"license" : "LGPL-3.0-or-later",
-	"homepage" : "https://github.com/syncgw/file-bundle",
+    "repositories" : [{
+            "type" : "composer",
+            "url" : "https://repo.packagist.org"
+    	}
+    ],
+	"type" : "syncgw-bundle",
+	"homepage" : "https://github.com/syncgw/ics-bundle",
 	"authors" : [{
 			"name" : "Florian Daeumling",
 			"homepage" : "https://github.com/toteph42"
@@ -15,7 +21,7 @@
 	],
 	"require" : {
 		"php" : ">=8.1",
-		"syncgw/core-bundle" : ">=9.19.78"
+		"syncgw/core-bundle" : ">=9.19.80"
 	},
 	"autoload" : {
 		"psr-4" : {
@@ -25,6 +31,6 @@
 	"support" : {
 		"issues" : "https://github.com/syncgw/syncgw/issues",
 		"source" : "https://github.com/syncgw/ics-bundle",
-		"docs" : "https://github.com/syncgw/doc-bundle"
+		"docs" : "https://github.com/syncgw/ics-bundle"
 	}
 }
